// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0[aria-orientation="horizontal"] {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<ul
  aria-orientation="vertical"
  class="c0 c1"
  role="menu"
/>
`;

exports[`styled horizontal 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0[aria-orientation="horizontal"] {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<ul
  aria-orientation="horizontal"
  class="c0 c1"
  role="menu"
/>
`;
